// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityIndicator Tests An ActivityIndicator can have custom colors 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-color",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              20,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          111,
          8,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              20,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          336,
          8,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              20,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          561,
          8,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              20,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          786,
          8,
          0,
        ],
        "Opacity": 1,
        "Size": [
          20,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "activity-color",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      36,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have custom colors and large sizing 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-large-color",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
      {
        "AutomationId": "",
        "ControlType": 50012,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "progress bar",
        "Name": "",
      },
    ],
    "ControlType": 50026,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "group",
    "Name": "",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              36,
              36,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          103,
          8,
          0,
        ],
        "Opacity": 1,
        "Size": [
          36,
          36,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              36,
              36,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          328,
          8,
          0,
        ],
        "Opacity": 1,
        "Size": [
          36,
          36,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              36,
              36,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          553,
          8,
          0,
        ],
        "Opacity": 1,
        "Size": [
          36,
          36,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              36,
              36,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Children": [
              {
                "Children": [
                  {
                    "Offset": [
                      0,
                      0,
                      0,
                    ],
                    "Opacity": 1,
                    "Size": [
                      80,
                      80,
                    ],
                    "Visual Type": "Visual",
                  },
                ],
                "Offset": [
                  0,
                  0,
                  0,
                ],
                "Opacity": 1,
                "Size": [
                  0,
                  0,
                ],
                "Visual Type": "Visual",
              },
            ],
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": [
              0,
              0,
              0,
            ],
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Offset": [
          778,
          8,
          0,
        ],
        "Opacity": 1,
        "Size": [
          36,
          36,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "activity-large-color",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      916,
      52,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have custom sizing 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-size",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "",
  },
  "Visual Tree": {
    "Comment": "activity-size",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      36,
      36,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have large sizing 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-large",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "",
  },
  "Visual Tree": {
    "Comment": "activity-large",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      36,
      36,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have styling 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-gray",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "",
  },
  "Visual Tree": {
    "Comment": "activity-gray",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      20,
      20,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can have toggle animation 1`] = `
{
  "Automation Tree": {
    "AutomationId": "activity-toggle",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "",
  },
  "Visual Tree": {
    "Comment": "activity-toggle",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      36,
      36,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`ActivityIndicator Tests An ActivityIndicator can render 1`] = `
{
  "Automation Tree": {
    "AutomationId": "default_activity_indicator",
    "ControlType": 50012,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": false,
    "LocalizedControlType": "progress bar",
    "Name": "Wait for content to load!",
  },
  "Visual Tree": {
    "Comment": "default_activity_indicator",
    "Offset": [
      0,
      0,
      0,
    ],
    "Opacity": 1,
    "Size": [
      20,
      20,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
